Name:           cairo
Version:        0.12.2
License:        BSD3
License-file:   COPYRIGHT
Copyright:      (c) 2001-2010 The Gtk2Hs Team, (c) Paolo Martini 2005, (c) Abraham Egnor 2003, 2004, (c) Aetion Technologies LLC 2004
Author:         Axel Simon, Duncan Coutts
Maintainer:     gtk2hs-users@lists.sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.8
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the Cairo library.
Description:    Cairo is a library to render high quality vector graphics. There
                exist various backends that allows rendering to Gtk windows, PDF,
                PS, PNG and SVG documents, amongst others.
Category:       Graphics
Tested-With:    GHC == 6.10.4, GHC == 6.12.3, GHC == 7.0.4, GHC == 7.2.1
extra-source-files: cairo-gtk2hs.h
                    SetupWrapper.hs SetupMain.hs Gtk2HsSetup.hs

Data-Dir:		demo
Data-Files:		cairo-clock-icon.png
                CairoGhci.hs
                Clock.hs
                Drawing2.hs
                Drawing.hs
                Graph.hs
                Makefile
                StarAndRing.hs
                Text.hs
				
Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       cairo

Flag cairo_pdf
  Description: Build the PDF backend of Cairo.
  
Flag cairo_ps
  Description: Build the PostScript backend of Cairo.

Flag cairo_svg
  Description: Build the Scalable Vector Graphics (SVG) backend of Cairo.
  
Library
        build-depends:  base >= 4 && < 5,
                        bytestring, mtl, array
        build-tools:    gtk2hsC2hs >= 0.13.5
        exposed-modules:  Graphics.Rendering.Cairo
                          Graphics.Rendering.Cairo.Matrix
                          Graphics.Rendering.Cairo.Types
			  -- this module is only meant to be used by other
			  -- modules implementing a Cairo interface
                          Graphics.Rendering.Cairo.Internal
        other-modules:
                          Graphics.Rendering.Cairo.Internal.Drawing.Cairo
                          Graphics.Rendering.Cairo.Internal.Drawing.Paths
                          Graphics.Rendering.Cairo.Internal.Drawing.Patterns
                          Graphics.Rendering.Cairo.Internal.Drawing.Text
                          Graphics.Rendering.Cairo.Internal.Drawing.Transformations
                          Graphics.Rendering.Cairo.Internal.Fonts.FontOptions
                          Graphics.Rendering.Cairo.Internal.Surfaces.Image
                          Graphics.Rendering.Cairo.Internal.Surfaces.PNG
                          Graphics.Rendering.Cairo.Internal.Surfaces.Surface
                          Graphics.Rendering.Cairo.Internal.Utilities
                          Graphics.Rendering.Cairo.Internal.Surfaces.PDF
                          Graphics.Rendering.Cairo.Internal.Surfaces.PS
                          Graphics.Rendering.Cairo.Internal.Surfaces.SVG
        extensions:     ForeignFunctionInterface
        x-c2hs-Header:  cairo-gtk2hs.h
        pkgconfig-depends: cairo >= 1.2.0
        if flag(cairo_pdf)
          pkgconfig-depends: cairo-pdf
        if flag(cairo_ps)
          pkgconfig-depends: cairo-ps
        if flag(cairo_svg)
          pkgconfig-depends: cairo-svg
